--- a/package.json
+++ b/package.json
@@ -3,25 +3,21 @@
 	"version": "1.0.0",
 	"description": "Template for creating TypeScript projects",
 	"main": "dist/index.js",
-	"module": "dist/index.mjs",
-	"types": "dist/index.d.ts",
-	"exports": {
-		"import": "./dist/index.mjs",
-		"require": "./dist/index.js",
-		"types": "./dist/index.d.ts"
-	},
 	"directories": {
-		"lib": "src"
+		"lib": "src",
+		"test": "test"
 	},
 	"files": [
 		"dist"
 	],
+	"imports": {
+		"#lib": "./dist/lib/index.js"
+	},
 	"scripts": {
 		"update": "yarn upgrade-interactive",
 		"test": "vitest run",
 		"test:watch": "vitest",
-		"build": "tsup && gen-esm-wrapper dist/index.js dist/index.mjs",
-		"clean": "node scripts/clean-dist.mjs",
+		"build": "tsup",
 		"lint": "eslint src test --ext mjs,js,ts --fix",
 		"format": "prettier --write \"{src,test}/**/*.ts\"",
 		"typecheck": "tsc -p tsconfig.eslint.json",
@@ -29,24 +25,31 @@
 		"check-update": "cliff-jumper --dry-run",
 		"postinstall": "husky install",
 		"prepack": "rollup-type-bundler -v -e node:url node:events && pinst --disable",
-		"postpack": "pinst --enable"
+		"postpack": "pinst --enable",
+		"start": "yarn build && node ."
 	},
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/TheRavenousCorporate/ts-template.git"
+		"url": "git+https://github.com/TheRavenousCorporate/bot-template.git"
 	},
 	"keywords": [],
 	"author": "@theravenouscorporate",
 	"license": "MIT",
 	"bugs": {
-		"url": "https://github.com/TheRavenousCorporate/ts-template/issues"
+		"url": "https://github.com/TheRavenousCorporate/bot-template/issues"
 	},
-	"homepage": "https://github.com/TheRavenousCorporate/ts-template#readme",
+	"homepage": "https://github.com/TheRavenousCorporate/bot-template#readme",
+	"dependencies": {
+		"@kaname-png/plugin-env": "^1.1.7",
+		"@sapphire/decorators": "^6.0.1",
+		"@sapphire/framework": "^4.5.0",
+		"discord.js": "14.x",
+		"dotenv": "^16.3.1"
+	},
 	"devDependencies": {
 		"@commitlint/cli": "^17.6.6",
 		"@commitlint/config-conventional": "^17.6.6",
 		"@favware/cliff-jumper": "^2.1.1",
-		"@favware/npm-deprecate": "^1.0.7",
 		"@favware/rollup-type-bundler": "^2.0.0",
 		"@sapphire/eslint-config": "^4.4.3",
 		"@sapphire/ts-config": "^4.0.0",
@@ -55,13 +58,10 @@
 		"@typescript-eslint/eslint-plugin": "^5.62.0",
 		"@typescript-eslint/parser": "^5.62.0",
 		"@vitest/coverage-v8": "^0.33.0",
-		"esbuild-plugin-file-path-extensions": "^1.0.0",
-		"esbuild-plugin-version-injector": "^1.2.0",
 		"eslint": "^8.45.0",
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-deprecation": "^1.4.1",
 		"eslint-plugin-prettier": "^4.2.1",
-		"gen-esm-wrapper": "^1.1.3",
 		"husky": "^8.0.3",
 		"lint-staged": "^13.2.3",
 		"pinst": "^3.0.0",
@@ -70,6 +70,9 @@
 		"tsup": "^7.1.0",
 		"typescript": "^5.1.6",
 		"vitest": "^0.33.0"
+	},
+	"resolutions": {
+		"dotenv-cra/dotenv": "^16.3.1"
 	},
 	"publishConfig": {
 		"access": "public"
